@@ -1,177 +1,0 @@
-<?php
-
-/* vim: set expandtab tabstop=4 shiftwidth=4 softtabstop=4: */
-
-// +-------------------------------------------------------------------+
-// | WiFiDog Authentication Server                                     |
-// | =============================                                     |
-// |                                                                   |
-// | The WiFiDog Authentication Server is part of the WiFiDog captive  |
-// | portal suite.                                                     |
-// +-------------------------------------------------------------------+
-// | PHP version 5 required.                                           |
-// +-------------------------------------------------------------------+
-// | Homepage:     http://www.wifidog.org/                             |
-// | Source Forge: http://sourceforge.net/projects/wifidog/            |
-// +-------------------------------------------------------------------+
-// | This program is free software; you can redistribute it and/or     |
-// | modify it under the terms of the GNU General Public License as    |
-// | published by the Free Software Foundation; either version 2 of    |
-// | the License, or (at your option) any later version.               |
-// |                                                                   |
-// | This program is distributed in the hope that it will be useful,   |
-// | but WITHOUT ANY WARRANTY; without even the implied warranty of    |
-// | MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the     |
-// | GNU General Public License for more details.                      |
-// |                                                                   |
-// | You should have received a copy of the GNU General Public License |
-// | along with this program; if not, contact:                         |
-// |                                                                   |
-// | Free Software Foundation           Voice:  +1-617-542-5942        |
-// | 59 Temple Place - Suite 330        Fax:    +1-617-542-2652        |
-// | Boston, MA  02111-1307,  USA       gnu@gnu.org                    |
-// |                                                                   |
-// +-------------------------------------------------------------------+
-
-/**
- * Node owner upload file
- *
- * @package    WiFiDogAuthServer
- * @author     Pascal Leclerc
- * @copyright  2005-2006 Pascal Leclerc
- * @version    Subversion $Id$
- * @link       http://www.wifidog.org/
- * @todo       Move to node getAdminUI.
- */
-
-/**
- * Load common include file
- */
-require_once('admin_common.php');
-
-require_once('classes/Node.php');
-require_once('classes/User.php');
-require_once('classes/MainUI.php');
-
-$user_id = User::getCurrentUser()->getId();
-$smarty->assign("user_id", $user_id); // DEBUG
-
-empty($_REQUEST['action'])  ? $action  = '' : $action  = $_REQUEST['action'];
-empty($_REQUEST['node_id']) ? $node_id = '' : $node_id = $_REQUEST['node_id'];
-empty($_REQUEST['delfile']) ? $delfile = '' : $delfile = $_REQUEST['delfile'];
-
-$username = User::getCurrentUser()->getUsername();
-$smarty->assign("username", $username); // DEBUG
-
-/**
- * @todo Remplacer les constantes definit dans config.php pour $filesArray
- */
-$filesArray = array (
-   "0" => array('filename' => 'hotspot_logo_banner.jpg', 'file_exists' => 0),
-   "1" => array('filename' => 'hotspot_logo.jpg',        'file_exists' => 0),
-   "2" => array('filename' => 'login.html',              'file_exists' => 0),
-   "3" => array('filename' => 'portal.html',             'file_exists' => 0),
-   "4" => array('filename' => 'stylesheet.css',          'file_exists' => 0)
-);
-
-// Error checking before user can upload files
-if (!is_writable(WIFIDOG_ABS_FILE_PATH . LOCAL_CONTENT_REL_PATH)) {
-     /**
-      * @todo Detailler l'erreur:
-      * - print absolute PATH directory
-      * - print current uid/gid
-      * - print needed uid/gid
-      */
-    $fileinfo = posix_getpwuid(posix_getuid());
-    $smarty->assign("error_message", _("Can not write to directory '" . WIFIDOG_ABS_FILE_PATH . LOCAL_CONTENT_REL_PATH . "', ownership should be set to user ") . $fileinfo['name'] . " (uid=" . $fileinfo['uid'] . ")");
-    $ui=new MainUI();
-    $ui->setToolSection('ADMIN');
-    $ui->setMainContent($smarty->fetch("admin/templates/owner_display.html"));
-    $ui->display();
-    //$smarty->display("admin/templates/owner_display.html");
-    exit();
-}
-
-if ("$delfile" == "submit") { // Submit all files
-    // Create node directory in local_content
-    if (!file_exists(WIFIDOG_ABS_FILE_PATH . LOCAL_CONTENT_REL_PATH . $node_id)) {
-        mkdir(WIFIDOG_ABS_FILE_PATH . LOCAL_CONTENT_REL_PATH . $node_id);  // TODO : Add error checking
-    }
-
-    foreach($filesArray as $fileArray) {
-        $filename = $fileArray['filename'];
-        $filename_underscore = str_replace('.', '_', $filename);
-
-        // Source and destination file (with PATH) and name (in tmp directory). @ is use to remove useless PHP notice message.
-        $source              = @$_FILES["$filename_underscore"]['tmp_name'];
-        $destination         = WIFIDOG_ABS_FILE_PATH . LOCAL_CONTENT_REL_PATH . "$node_id/$filename";  // Destination file PATH and name (local_content)
-        //echo "S=$source D=$destination<BR>";
-        if (empty($source)) // Skip empty input file submission
-            continue;
-
-        /**
-         * @todo Display file upload success or error.
-         */
-        if (move_uploaded_file($source, $destination)) {
-            //echo "File is valid, and was successfully uploaded.<BR>";
-        } else {
-            $smarty->assign("error_message", 'Possible file upload attack!');
-        }
-    }
-} else { // Delete only if the filename is defined and include in $filesArray
-    foreach($filesArray as $fileArray) {
-        if ($fileArray['filename'] == $delfile) {
-            $filename = $fileArray['filename'];
-            $source = WIFIDOG_ABS_FILE_PATH . LOCAL_CONTENT_REL_PATH . "$node_id/$filename";
-            //echo "DELETE SOURCE=$source<BR>";
-            unlink($source);
-        }
-    }
-}
-
-if ("$action" == 'uploadform') {
-    Security::requireOwner($node_id);
-    $inc = 0;
-    foreach($filesArray as $fileArray) {
-        $filename = $fileArray['filename'];
-        if (file_exists(WIFIDOG_ABS_FILE_PATH . LOCAL_CONTENT_REL_PATH . "$node_id/$filename")) {
-            $filesArray[$inc]['file_exists'] = 1;
-        }
-        ++$inc;
-    }
-
-    $smarty->assign("file_list", $filesArray);
-    $smarty->assign("node_id", $node_id);
-    $ui=new MainUI();
-    $ui->setToolSection('ADMIN');
-    $ui->setMainContent($smarty->fetch("admin/templates/owner_display.html"));
-    $ui->display();
-    //$smarty->display("admin/templates/owner_upload.html");
-} else {
-    $db->execSql("SELECT nodes.node_id,name FROM nodes NATURAL JOIN node_owners WHERE node_owners.user_id='$user_id'", $node_results, false);
-
-    if (is_array($node_results)) {
-        $smarty->assign("node_list", $node_results);
-        //foreach($node_results as $node_row) {
-        //    $smarty->append("node_list", $node_row);
-        //}
-    } else {
-        $smarty->assign("error_message", _('You are not a hotspot owner'));
-    }
-    $smarty->assign("node_id", $node_id);
-    $ui=new MainUI();
-    $ui->setToolSection('ADMIN');
-    $ui->setMainContent($smarty->fetch("admin/templates/owner_display.html"));
-    $ui->display();
-    //$smarty->display("admin/templates/owner_display.html");
-}
-
-/*
- * Local variables:
- * tab-width: 4
- * c-basic-offset: 4
- * c-hanging-comment-ender-p: nil
- * End:
- */
-
-?>
